--- a/locales/es.yml
+++ b/locales/es.yml
@@ -5,9 +5,18 @@ button:
   home: Inicio
   toggle_dark: Alternar modo oscuro
   toggle_langs: Cambiar idiomas
+career: Trabajo
+female: Femenino
+gender: Género
+careers: 
+  culinary: Trabajador culinario
+  painter: Pintor
+  athlete: Atleta
+  style-influencer: Influencer de estilo
 intro:
   desc: Plantilla de Inicio de Vite Dogmática
   dynamic-route: Demo de ruta dinámica
   hi: ¡Hola, {name}!
   whats-your-name: ¿Cómo te llamas?
+male: Masculino
 not-found: No se ha encontrado
